# mida_acv

./: .~lock.data_new_description.pptx#  README.md  mapbox_token  mida_acv.ipynb  notes.org  presentation_1.org  presentation_1.tex  pyproject.toml  run.sh  window_accuracy.csv
.auctex-auto/: presentation_1.el
data/: .mapbox_token
data/Documentation/: .~lock.CampaingDescription.xlsx#  CampaingDescription.csv  CampaingDescription.xlsx
data/simplified_datasets/deck/double/: timeseries-0.csv  timeseries-2.csv
data/simplified_datasets/deck/single/: timeseries-10.csv  timeseries-12.csv  timeseries-18.csv  timeseries-5.csv
data/simplified_datasets/stem/single/: timeseries-0.csv  timeseries-10.csv  timeseries-2.csv
data/simplified_datasets_1e-06/deck/single/: timeseries-4.csv
data/simplified_datasets_1e-06/stem/double/: timeseries-1.csv
data/simplified_datasets_1e-06/stem/single/: timeseries-12.csv  timeseries-15.csv  timeseries-5.csv
data_new/: .~lock.21_06_07.pptx#  .~lock.Calibrated_GabrieleAlberto_Jessica_166_deck.csv#  .~lock.Calibrated_JessicaAlberto_Gabriele_108_deck.csv#  .~lock.Calibrated_Jessica_Giovanni_113_deck.csv#  .~lock.Calibrated_Leonardo_Cecchin_100_deck.csv#
experimental_results/: classifier_passengers.pkl  classifier_weight.pkl  features_train_passengers.csv  features_train_passengers.pkl  features_train_weight.pkl
src/mida_acv/: driver_enum.py  feature_extraction.py  main.py  mida_acv.ipynb  parsing.py  pca.py  preprocessing.py  sensor_position_enum.py  utilities.py  visualization.py
tests/: test_mida_acv.py
(+30 files in other folders)
