[tool.poetry]
name = "mida_acv"
version = "0.1.0"
description = ""
authors = ["dpaletti <danielepaletti98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^4.14.3"
pandas = "^1.2.4"
rdp = "^0.8"
geopandas = "^0.9.0"
joblib = "^1.0.1"
tqdm = "^4.60.0"
sklearn = "^0.0"
psutil = "^5.8.0"
requests = "^2.25.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mida_acv = "mida_acv.main:main"
